# sem2

./: .gitignore  .index.md.swp  .readings.md.swp  .site.hs.swp  about.md  encrypt.html  index.md  makefile  readings.md  site.cabal  site.hs  stack.yaml
csl/: lsa.csl
css/: css.css  syntax.css
docs/: about.html  archive.html  index.html  readings.html
docs/css/: css.css  syntax.css  tachyons.min.css
docs/files/: staticrypt.html
docs/js/: jquery.min.js  postprocess.js
docs/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-12-07-tu-quoque.html  2018-01-28-carpe-diem.html
files/: staticrypt.html
js/: postprocess.js
posts/: 2015-08-12-spqr.md  2018-01-28-carpe-diem.md
templates/: default.html
