name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , pandoc >= 1.16
                  , hjsmin == 0.2.*
                  , bytestring >= 0.10
                  , containers -any
  ghc-options:      -threaded
  default-language: Haskell2010
